--- a/escritores.html
+++ b/escritores.html
@@ -169,7 +169,7 @@
 		            <li><a href="#" onclick="openSection('fh5co-testimonials')" data-nav-section="testimonials"><span>Inspiración</span></a></li>
 		            <li><a href="#" onclick="openSection('fh5co-services')" data-nav-section="services" ><span>Proyectos</span></a></li>
 		            <li><a href="#" onclick="openSection('fh5co-about')" data-nav-section="about" ><span>Nosotros</span></a></li>
-					<li><a href="#" onclick="openSection('fh5co-eventos')" data-nav-section="eventos" ><span>Eventos</span></a></li>
+					<li><a href="#" onclick="openSection('fh5co-eventos')" data-nav-section="eventos" ><span>Noticias</span></a></li>
 		            <!--<li><a href="#" data-nav-section="contact" onmouseout="contactos.pause();" onmouseover="contactos.play()"><span>Contactos</span></a></li>-->
 		          </ul>
 		        </div>
