--- a/ingles/investigaciones.html
+++ b/ingles/investigaciones.html
@@ -156,7 +156,7 @@
 						<li><a href="#" data-nav-section="testimonials"><span>Inspiration</span></a></li>
 						<li><a href="#" data-nav-section="services"><span>Projects</span></a></li>
 						<li><a href="#" data-nav-section="about"><span>We are</span></a></li>
-						<li><a href="#" data-nav-section="eventos"><span>Events</span></a></li>
+						<li><a href="#" data-nav-section="eventos"><span>News</span></a></li>
 					  </ul>
 		        </div>
 			</nav>
