--- a/qillqaq.html
+++ b/qillqaq.html
@@ -165,7 +165,7 @@
 						<li><a href="#" data-nav-section="testimonials"><span>Inspiración</span></a></li>
 						<li><a href="#" data-nav-section="services"><span>Proyectos</span></a></li>
 						<li><a href="#" data-nav-section="about"><span>Nosotros</span></a></li>
-						<li><a href="#" data-nav-section="eventos"><span>Eventos</span></a></li>
+						<li><a href="#" data-nav-section="eventos"><span>Noticias</span></a></li>
 					  </ul>
 		        </div>
 			</nav>
