--- a/quechua/index.html
+++ b/quechua/index.html
@@ -362,7 +362,7 @@
 						<li><a href="#" data-nav-section="testimonials" onmouseover="openAudio('inspiracion');" onmouseout="inspiracion.pause();"><span>Munayninchik</span></a></li>
 						<li><a href="#" data-nav-section="services" onmouseover="openAudio('proyectos_menu');" onmouseout="proyectos_menu.pause();" ><span>Llamkaykuna</span></a></li>
 						<li><a href="#" data-nav-section="about" onmouseover="openAudio('nosotros');" onmouseout="nosotros.pause();" ><span>Ñuqanchik</span></a></li>
-						<li><a href="#" data-nav-section="eventos" onmouseover="openAudio('eventos');" onmouseout="eventos.pause();" ><span>Huñunakuykuna</span></a></li>
+						<li><a href="#" data-nav-section="eventos" onmouseover="openAudio('eventos');" onmouseout="eventos.pause();" ><span>Willakuykuna</span></a></li>
 						<li><img id="imagen" src="../images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
 					  </ul>
 		        </div>
