--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
 </head>
 <body>
+
 	<section>
 		<div class="" style="background: #00a7a3; height:50px;">
 			<div class="container">
@@ -706,9 +707,10 @@
 				</div>	
 			</div>
 			
-			<div class="col-lg-12  col-md-12  col-sm-12  col-xs-12">
 			
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div id="noticia" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
 				<div class="flexslider1">
 					<ul class="slides">
 						<li href="http://puntoedu.pucp.edu.pe/noticias/proyecto-pucp-busca-extender-el-uso-del-quechua/" target="-black">
@@ -736,20 +738,29 @@
 				  </ul>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
 				<div class="">
 					<h2>ASR Quechua</h2>
 						<p>La meta de este proyecto es desarrollar un software capaz de convertir locuciones en texto en el idioma Quechua Sureño.
-							</br> Para conseguirlo se hacen uso de las técnicas mas modernas de inteligencia artificial.</p>
+						</br> Para conseguirlo se hacen uso de las técnicas mas modernas de inteligencia artificial.</p>
 				</div>
 			</div>
 			<!---twitter-->
-			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-4">
 				<a class="twitter-timeline"  href="https://twitter.com/search?q=from%3Afilac_%20OR%20from%3ASiminchikkuna%20OR%20from%3AUNPFII%20OR%20from%3AMinCulturaPe%20OR%20from%3Anuqanchik%20OR%20from%3AMozillaNativo%20" data-widget-id="971891438282838016">Tweets sobre from:filac_ OR from:Siminchikkuna OR from:UNPFII OR from:MinCulturaPe OR from:nuqanchik OR from:MozillaNativo </a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                     
 			</div>
+			</div>
+			
+			
+			<div id="" class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+				<div class="fb-comments" data-href="https://siminchikkunarayku.pe/" data-width="100%" data-numposts="5"></div>
+ 			</div>
+			</div>
+
 		</div>
+		
 		
 		
 		
@@ -903,15 +914,18 @@ $(window).load(function() {
     </div>
 	
 </div>
-
- <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.12&appId=1914844221901752&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+	<!--facebook--->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.12';
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+	 
+ 
 
 	<!--pop up--->
  <script type="text/javascript">
