--- a/ingles/traductor.html
+++ b/ingles/traductor.html
@@ -155,7 +155,7 @@
 						<li><a href="#" data-nav-section="testimonials" ><span>Inspiration</span></a></li>
 						<li><a href="#" data-nav-section="services"  ><span>Projects</span></a></li>
 						<li><a href="#" data-nav-section="about"  ><span>We are</span></a></li>
-						<li><a href="#" data-nav-section="eventos" ><span>Events</span></a></li>
+						<li><a href="#" data-nav-section="eventos" ><span>News</span></a></li>
 						
 						<li><img id="imagen" src="../images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
 					  </ul>
