--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 						<figure><img src="images/person2.jpg" alt="Image"></figure>
 						<h3>Nelsi Melgarejo Vergara</h3>
 						<span class="fh5co-position">Tesista</span>
-						<p>Bachiller de la carrera de ingeniería de sistemas altamente creativa, con iniciativa y puntualidad, asumo con responsabilidad los retos y metas que la institución me plantee; adaptabilidad al cambio, facilidad para trabajar en equipo, así como para resolver problemas eficientemente.</p>
+						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
 						<ul class="social social-circle">
 							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-facebook"></i></a></li>
