--- a/ingles/mapa.html
+++ b/ingles/mapa.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Siminchikkunarayku  </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="Quechua" />
 	<meta <meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
 	
 
