--- a/mapa.html
+++ b/mapa.html
@@ -4,9 +4,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Siminchikkunarayku  </title>
+	<title>Siminchikkunarayku</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="" />
 	<meta <meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
 	
 
@@ -406,13 +406,6 @@ function openSection(texto){
 
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
-
-  
-
-
-
-  
-
 
 	</body>
 </html>
