--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 	<!-- Demo CSS -->
 	<link rel="stylesheet" href="css/demo.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/flexslider1.css" type="text/css" media="screen" />
 	<!-- contact validation -->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
 	
@@ -706,32 +708,30 @@
 					<h2 class=""> Noticias</h2>
 				</div>	
 			</div>
-			
-			
+						
 			<div id="noticia" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
 				<div class="flexslider1">
 					<ul class="slides">
 						<li href="http://puntoedu.pucp.edu.pe/noticias/proyecto-pucp-busca-extender-el-uso-del-quechua/" target="-black">
 						  <a href="http://puntoedu.pucp.edu.pe/noticias/proyecto-pucp-busca-extender-el-uso-del-quechua/">
-								<img data-aria-label-part="" src="https://pbs.twimg.com/media/DXzL2JVXUAcqlP9.jpg" alt="" style="width: 100%; top: -0px;">
+								<img data-aria-label-part="" src="https://pbs.twimg.com/media/DXzL2JVXUAcqlP9.jpg" alt="" style="width:568px; height:358px;">
 						   </a>
 						  <p class="flex-caption" >Proyecto PUCP busca extender el uso del quechua.</p>
 						</li>
 						<li>
 						  <a href="http://larepublica.pe/domingo/1045968-chay-mana-qullunanpaq-para-que-no-se-extinga" target="-black"> 
-							<img data-aria-label-part="" src="https://prod.media.larepublica.pe/720x405/larepublica/imagen/2017/08/13/noticia-idioma-suplemento-domingo.jpg"  style="width: 433px;	height: 288px;">
+							<img data-aria-label-part="" src="https://prod.media.larepublica.pe/720x405/larepublica/imagen/2017/08/13/noticia-idioma-suplemento-domingo.jpg"  style="width:568px; height:358px;">
 						  </a>
 						  <p class="flex-caption">Chay mana qullunanpaq (Para que no se extinga).</p>
 						</li>
 						<li href="https://www.linuxfoundation.org/blog/2016-lift-scholarship-winner-luis-camacho-caballero-preserving-amazon-languages-with-linux/" target="_blank">
-						  <img id="imageOriginal" src="https://prod.media.larepublica.pe/720x405/larepublica/imagen/2017/08/13/noticia-suplemento-domingo-nota_0.jpg"  class="" style="width: 433px;	height: 288px;">
+						  <img id="imageOriginal" src="https://prod.media.larepublica.pe/720x405/larepublica/imagen/2017/08/13/noticia-suplemento-domingo-nota_0.jpg"  class="" style="width:568px;	height: 358px;">
 						  <p class="flex-caption">Ganador de la Beca LiFT 2016 Luis Camacho Caballero: Preservando las lenguas de Amazon con Linux</p>
 						</li>
 						<li>
 						  <a href="https://panamericana.pe/tecnologia/239562-quechua-podra-hablarse-planeta-gracias-proyecto-puedes-parte" target="_blank">
-							<img src="https://img.panamericana.pe/noticia/640-1517325760721.jpg" style="width: 433px;	height: 288px;">
+							<img src="https://img.panamericana.pe/noticia/640-1517325760721.jpg" style="width: 568px;	height: 358px;">
 						  </a>
 						  <p class="flex-caption">¡El Quechua podrá hablarse en todo el planeta gracias a este proyecto y tú puedes ser parte de él.!</p>
 						</li>
@@ -799,10 +799,10 @@ $(window).load(function() {
 					<ul class="fh5co-contact-info">
 						<li class="fh5co-contact-address ">
 						<img src="images/icons/home.png" class="icons_bottom">
-							Av. Universitaria 1801, San Miguel Lima - Perú
+							Jr. Sousa 104, Abancay Apurimac - Perú
 						</li>
-						<li><img src="images/icons/phone_book.png" class="icons_bottom"> (511) 626-2452</li>
-						<li><img src="images/icons/mail.png" class="icons_bottom"></i>qichwa@pucp.edu.pe</li>
+						<li><img src="images/icons/phone_book.png" class="icons_bottom">(51)966422108</li>
+						<li><img src="images/icons/mail.png" class="icons_bottom"></i>siminchikkunarayku@gmail.com</li>
 						<!-- <li><i class="icon-globe"></i> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></li> -->
 					</ul>
 				</div>
@@ -841,7 +841,7 @@ $(window).load(function() {
 	</section>
 
 
-	<footer id="auspiciadores">
+	<section id="auspiciadores">
 		
 		<div class="container">
 			
@@ -867,14 +867,14 @@ $(window).load(function() {
 				</div>
 			</div>
 		</div>
-	</footer>
+	</section>
 	
 	<footer id="footer" role="contentinfo">
 		<a href="#" class="gotop js-gotop"><i class="icon-arrow-up2"></i></a>
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; Consorcio de Universidades.<br>Creado por <a href="" target="_blank">Nelsi Melgarejo</a></p>
+					<p>&copy; Siminchikkunarayku<br>Creado por <a href="" target="_blank">Nelsi Melgarejo</a></p>
 				</div>
 			</div>
 			<div class="row">
