--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Quechua" />
 	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
-	
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -374,7 +374,22 @@
 			</div>
 			
 			<div class="row data" data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'> 
-			
+<!-- nelsi-->
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Sueño que nuestra lengua, que representa una riqueza cultural, viva siempre, que los latinoamericanos conozcan y hablen, que nos ayuden a desarrollarnos valorando nuestras raíces históricas. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="images/person2.jpg" alt="Person"></figure>
+							<a href="https://twitter.com/NelsiBMV" target="_blank">
+							<p>Nelsi Melgarejo Vergara</a><br> 
+								Universidad Nacional del Callao 
+								<span class="subtext">Investigadora Asociada</span>
+							</p>
+						</div>
+					</div>
+				</div>			
 <!-- lorenzo-->
 				<div class="fondo">
 					<div class="box-testimony">
@@ -387,6 +402,23 @@
 							<p>Lorenzo Ruiz De La Vega Tenorio</a> <br>
 								Universidad Antonio Ruiz de Montoya 
 								<span class="subtext">Tesista</span>
+							</p>
+						</div>
+					</div>
+				</div>	
+<!-- Rodo-->
+	
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Ayudar a las millones de personas Quechua hablantes a seguir conservando una de las lenguas más representativas de América Latina. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="images/person3.jpg" alt="Person"></figure>
+							<a href="https://twitter.com/rjzevallos" target="_blank">
+							<p>Rodolfo Zevallos Salazar </a><br> 
+								Universidad Nacional del Callao 
+								<span class="subtext">Investigador Asociado</span>
 							</p>
 						</div>
 					</div>
@@ -409,22 +441,7 @@
 				</div>
 
 
-<!-- nelsi-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Sueño que nuestra lengua, que representa una riqueza cultural, viva siempre, que los latinoamericanos conozcan y hablen, que nos ayuden a desarrollarnos valorando nuestras raíces históricas. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="images/person2.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/NelsiBMV" target="_blank">
-							<p>Nelsi Melgarejo Vergara</a><br> 
-								Universidad Nacional del Callao 
-								<span class="subtext">Tesista</span>
-							</p>
-						</div>
-					</div>
-				</div>
+
 <!-- ronald-->
 				<div class="fondo">
 					<div class="box-testimony">
@@ -442,23 +459,7 @@
 					</div>
 				</div>
 				
-	<!-- Rodo-->
-	
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Ayudar a las millones de personas Quechua hablantes a seguir conservando una de las lenguas más representativas de América Latina. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="images/person3.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/rjzevallos" target="_blank">
-							<p>Rodolfo Zevallos Salazar </a><br> 
-								Universidad Nacional del Callao 
-								<span class="subtext">Investigador Asociado</span>
-							</p>
-						</div>
-					</div>
-				</div>	
+
 
 <!-- Reynaldo-->
 
@@ -472,6 +473,22 @@
 							<p>Reynaldo Baquerizo <br> 
 								Pontificia Universidad Católica del Perú 
 								<span class="subtext">Investigador Asociado</span>
+							</p>
+						</div>
+					</div>
+				</div>	
+<!-- Catherine -->
+
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Encantada de colaborar con la increíble comunidad co-creando Siminchikkunarayku. Creo firmemente en el gran impacto social del uso de la tecnología de portabilidad computacional para cerrar la brecha digital de las comunidades de idioma Quechua y otros importantes idiomas de América Latina.  &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="images/Catherine.png" alt="Person"></figure>
+							<p>Catherine García<br> 
+								Pontificia Universidad Católica del Perú 
+								<span class="subtext">Investigadora Asociada</span>
 							</p>
 						</div>
 					</div>
@@ -577,6 +594,35 @@
 				</div>
 			</div>
 			<div class="row data " data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'>
+
+<!-- nelsi -->
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="images/person2.jpg" alt="Image"></figure>
+						<h3>Nelsi Melgarejo Vergara</h3>
+						<span class="fh5co-position">Investigadora  Asociada</span>
+						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
+<!-- lorenzo -->
+				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="images/person4.jpg" alt="Image"></figure>
+						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
+						<span class="fh5co-position">Tesista</span>
+						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
 <!-- rodo -->			
 				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
@@ -622,30 +668,17 @@
 						</ul>
 					</div>
 				</div>
-<!-- nelsi -->
-				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
-					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/person2.jpg" alt="Image"></figure>
-						<h3>Nelsi Melgarejo Vergara</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
-						<ul class="social social-circle">
-							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-<!-- lorenzo -->
+
+<!-- Catherine -->
 				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person4.jpg" alt="Image"></figure>
-						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<h3>Catherine García</h3>
+						<span class="fh5co-position">Investigadora  Asociada</span>
+						<p>Abogada en Derecho y Ciencias Políticas. Ha realizado estudios sobre Privacidad, Seguridad de la información y Filosofía del Diseño de Tecnología. Trabaja en politicas publicas de las TICs orientadas a cerrar las brechas digitales y en la intersección de la tecnología, los derechos, la ética y la gobernanza del internet. Profesora de la Facultad de Administración Pública, Derecho y Seguridad de la Universidad de La Haya de Ciencias Aplicadas y Consultora independeinte en temas Tecnología Cívica e Innovacion Social  en Chakana Lab, consultora senior en el Programa de Diplomacia Multilateral del Instituto de las Naciones Unidas para la Formación e Investigación y experto en el Foro de Gobernanza de Internet de las Naciones Unidas. </p>
 						<ul class="social social-circle">
-							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
@@ -1013,7 +1046,7 @@ $(window).load(function() {
 
 
 	<!-- jQuery -->
-	<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<!-- <script src="js/jquery.min.js"></script> -->
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
