--- a/ingles/index.html
+++ b/ingles/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Quechua" />
 	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -363,39 +364,6 @@
 			</div>
 			
 			<div class="row data" data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'> 
-<!-- lorenzo-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Build an intercultural country without exclusion nor discrimination, where speakers of native languages have the same opportunities for development in their own language. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="../images/person4.jpg" alt="Person"></figure>
-							<a href="https://www.facebook.com/LorenzoRuizdelaVega?hc_ref=ART9zth7uq3vpKh8tN_L14A1O77R4ZejVLdOvGFsV" target="_blank">
-							<p>Lorenzo Ruiz De La Vega Tenorio</a> <br>
-								Antonio Ruiz de Montoya University 
-								<span class="subtext">Tesista</span>
-							</p>
-						</div>
-					</div>
-				</div>
-<!-- luis-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;My tradition, my cultural heritage, my family inspired me to develop the proposal that is now the SIMINCHIKKUNARAYKU initiative. I am convinced that we can convert all Peruvians into polyglots.&rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="../images/person1.jpg" alt="Person"></figure>
-							<a href="https://www.youtube.com/channel/UCtr39nRxoLgf6JFEIuUykkg" target="_blank">
-							<p>Atuq Kamachikuq </a><br> 
-								Pontifical Catholic University of Peru
-								<span class="subtext">Principal Investigator</span>
-							</p>
-						</div>
-					</div>
-				</div>
-
 
 <!-- nelsi-->
 				<div class="fondo">
@@ -413,6 +381,56 @@
 						</div>
 					</div>
 				</div>
+<!-- lorenzo-->
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Build an intercultural country without exclusion nor discrimination, where speakers of native languages have the same opportunities for development in their own language. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/person4.jpg" alt="Person"></figure>
+							<a href="https://www.facebook.com/LorenzoRuizdelaVega?hc_ref=ART9zth7uq3vpKh8tN_L14A1O77R4ZejVLdOvGFsV" target="_blank">
+							<p>Lorenzo Ruiz De La Vega Tenorio</a> <br>
+								Antonio Ruiz de Montoya University 
+								<span class="subtext">Tesista</span>
+							</p>
+						</div>
+					</div>
+				</div>
+<!-- Rodo-->
+	
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;To help the millions of Quechua speakers continue to preserve one of the most representative languages of Latin America &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/person3.jpg" alt="Person"></figure>
+							<a href="https://twitter.com/rjzevallos" target="_blank">
+							<p>Rodolfo Zevallos Salazar </a><br> 
+								National University of Callao 
+								<span class="subtext">Research associate</span>
+							</p>
+						</div>
+					</div>
+				</div>	
+<!-- luis-->
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;My tradition, my cultural heritage, my family inspired me to develop the proposal that is now the SIMINCHIKKUNARAYKU initiative. I am convinced that we can convert all Peruvians into polyglots.&rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/person1.jpg" alt="Person"></figure>
+							<a href="https://www.youtube.com/channel/UCtr39nRxoLgf6JFEIuUykkg" target="_blank">
+							<p>Atuq Kamachikuq </a><br> 
+								Pontifical Catholic University of Peru
+								<span class="subtext">Principal Investigator</span>
+							</p>
+						</div>
+					</div>
+				</div>
+
 
 
 
@@ -433,24 +451,6 @@
 					</div>
 				</div>				
 				
-	<!-- Rodo-->
-	
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;To help the millions of Quechua speakers continue to preserve one of the most representative languages of Latin America &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="../images/person3.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/rjzevallos" target="_blank">
-							<p>Rodolfo Zevallos Salazar </a><br> 
-								National University of Callao 
-								<span class="subtext">Research associate</span>
-							</p>
-						</div>
-					</div>
-				</div>	
-
 <!-- Reynaldo-->
 
 				<div class="fondo">
@@ -461,6 +461,22 @@
 						<div class="author to-animate">
 							<figure><img src="../images/reynaldo.png" alt="Person"></figure>
 							<p>Reynaldo Baquerizo <br> 
+								Pontifical Catholic University of Peru
+								<span class="subtext">Research associate</span>
+							</p>
+						</div>
+					</div>
+				</div>	
+<!-- Catherine -->
+
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Catherine is inspired and highly committed in bridging the digital gap by engaging in collaborations  facilitating Civic Tech and ICT for Development, envisioning a future where the people who imagine and build technology mirror the people and societies they build it for.&rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/Catherine.png" alt="Person"></figure>
+							<p>Catherine García<br> 
 								Pontifical Catholic University of Peru
 								<span class="subtext">Research associate</span>
 							</p>
@@ -568,6 +584,35 @@
 				</div>
 			</div>
 			<div class="row data " data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'>
+<!-- nelsi -->
+				<div class="fondo">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="../images/person2.jpg" alt="Image"></figure>
+						<h3>Nelsi Melgarejo Vergara</h3>
+						<span class="fh5co-position">Investigadora Asociada</span>
+						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
+
+<!-- lorenzo -->
+				<div class="fondo">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="../images/person4.jpg" alt="Image"></figure>
+						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
+						<span class="fh5co-position">Tesista</span>
+						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
 <!-- rodo -->			
 				<div class="fondo">
 					<div class="fh5co-person text-center to-animate">
@@ -612,35 +657,22 @@
 					</div>
 				</div>
 
-<!-- nelsi -->
-				<div class="fondo">
-					<div class="fh5co-person text-center to-animate">
-						<figure><img src="../images/person2.jpg" alt="Image"></figure>
-						<h3>Nelsi Melgarejo Vergara</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
-						<ul class="social social-circle">
-							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
 
-<!-- lorenzo -->
+<!-- Catherine -->
 				<div class="fondo">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="../images/person4.jpg" alt="Image"></figure>
-						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<figure><img src="../images/Catherine.png" alt="Image"></figure>
+						<h3>Catherine García</h3>
+						<span class="fh5co-position">Investigador Asociado</span>
+						<p>Juris Doctor in Law and Political Science. She has pursued studies on Privacy, Information Security and Philosophy of Technology Design. Bridging policy silos in the digital field, working at the intersection of technology, rights, ethics and governance.  Lecturer at the Faculty of Public Management, Law and Security at The Hague University of Applied Sciences and Civic Tech and Social Innovation Independent Consultant at Chakana Lab, senior consultant at the Multilateral Diplomacy Program of the United Nations Institute for Training and Research and accredited expert at the UN- Internet Governance Forum.</p>
 						<ul class="social social-circle">
-							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
+				
 
 			</div>
 		</div>
