--- a/quechua/suscripcion.html
+++ b/quechua/suscripcion.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Quechua" />
 	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
-
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
