--- a/quechua/index.html
+++ b/quechua/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 	<html class="no-js"> <!--<![endif]-->
 	<head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113083764-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-113083764-1');
-</script>
+	
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Quechua" />
 	<meta name="keywords" content="siminchikkunarayku, quechua, runasimi, asr, reinvindicación, kichwa, traductor, andes, andino, tecnología, precolombino, aymara, ashanka, awjun, shipino, wanpis, kauki, kawsay" />
-	
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 
   	<!-- Facebook and Twitter integration -->
@@ -69,7 +61,16 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
 	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113083764-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
+		gtag('config', 'UA-113083764-1');
+	</script>
+	
 	<style type="text/css">
 	#musica {height:0;width:0;}
 	</style>
@@ -576,6 +577,22 @@
 			
 			<div class="row data" data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'> 
 
+<!-- nelsi-->
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Ñuqam muspani kay siminchik, achka yachayniyuq, wiñaypaq kawsananta, llapa abya yala suyupi runakuna riqsichunku hinaspa rimachunku, chaynallataq yanapanakusun allin kawsay tarinanchikpaq sapinchikta waqaychastin. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/person2.jpg" alt="Person"></figure>
+							<a href="https://twitter.com/NelsiBMV" target="_blank">
+							<p>Nelsi Melgarejo Vergara</a><br> 
+								Universidad Nacional del Callao 
+								<span class="subtext">Yachay maskapaq</span>
+							</p>
+						</div>
+					</div>
+				</div>
 <!-- lorenzo-->
 				<div class="fondo">
 					<div class="box-testimony">
@@ -592,7 +609,23 @@
 						</div>
 					</div>
 				</div>	
-				
+<!-- Rodo-->
+	
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Ñuqam munani llapallan qichwa rimaqkuna siminkuta kallpancharinanta, kay simim ancha hatun kuyasqa kay Abya Yala suyupi. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/person3.jpg" alt="Person"></figure>
+							<a href="https://twitter.com/rjzevallos" target="_blank">
+							<p>Rodolfo Zevallos Salazar </a><br> 
+								Universidad Nacional del Callao 
+								<span class="subtext">Yachay maskapaq</span>
+							</p>
+						</div>
+					</div>
+				</div>	
 <!-- luis-->
 				<div class="fondo">
 					<div class="box-testimony">
@@ -605,22 +638,6 @@
 							<p>Atuq Kamachikuq </a><br> 
 								Pontificia Universidad Católica del Perú
 								<span class="subtext">Yachay maskapaq</span>
-							</p>
-						</div>
-					</div>
-				</div>
-<!-- nelsi-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Ñuqam muspani kay siminchik, achka yachayniyuq, wiñaypaq kawsananta, llapa abya yala suyupi runakuna riqsichunku hinaspa rimachunku, chaynallataq yanapanakusun allin kawsay tarinanchikpaq sapinchikta waqaychastin. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="../images/person2.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/NelsiBMV" target="_blank">
-							<p>Nelsi Melgarejo Vergara</a><br> 
-								Universidad Nacional del Callao 
-								<span class="subtext">Tesis ruwaq</span>
 							</p>
 						</div>
 					</div>
@@ -643,25 +660,6 @@
 					</div>
 				</div>
 
-				
-	<!-- Rodo-->
-	
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Ñuqam munani llapallan qichwa rimaqkuna siminkuta kallpancharinanta, kay simim ancha hatun kuyasqa kay Abya Yala suyupi. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="../images/person3.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/rjzevallos" target="_blank">
-							<p>Rodolfo Zevallos Salazar </a><br> 
-								Universidad Nacional del Callao 
-								<span class="subtext">Yachay maskapaq</span>
-							</p>
-						</div>
-					</div>
-				</div>	
-
 <!-- Reynaldo-->
 
 				<div class="fondo">
@@ -677,7 +675,23 @@
 							</p>
 						</div>
 					</div>
-				</div>	
+				</div>
+<!-- Catherine -->
+
+				<div class="fondo">
+					<div class="box-testimony">
+						<blockquote class="to-animate-2">
+							<p>&ldquo;Encantada de colaborar con la increíble comunidad co-creando Siminchikkunarayku. Creo firmemente en el gran impacto social del uso de la tecnología de portabilidad computacional para cerrar la brecha digital de las comunidades de idioma Quechua y otros importantes idiomas de América Latina. &rdquo;</p>
+						</blockquote>
+						<div class="author to-animate">
+							<figure><img src="../images/Catherine.png" alt="Person"></figure>
+							<p>Catherine García<br> 
+								Pontifical Catholic University of Peru
+								<span class="subtext">Yachay maskapaq</span>
+							</p>
+						</div>
+					</div>
+				</div>				
 			</div>
 			<br>
 		</div>
@@ -779,6 +793,36 @@
 				</div>
 			</div>
 			<div class="row data " data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'>
+<!-- nelsi -->
+				<div class="fondo">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="../images/person2.jpg" alt="Image"></figure>
+						<h3>Nelsi Melgarejo Vergara</h3>
+						<span class="fh5co-position">Investigadora Asociada</span>
+						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
+
+
+<!-- lorenzo -->
+				<div class="fondo">
+					<div class="fh5co-person text-center to-animate">
+						<figure><img src="../images/person4.jpg" alt="Image"></figure>
+						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
+						<span class="fh5co-position">Tesista</span>
+						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<ul class="social social-circle">
+							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#"><i class="icon-github"></i></a></li>
+						</ul>
+					</div>
+				</div>
 <!-- rodo -->			
 				<div class="fondo">
 					<div class="fh5co-person text-center to-animate">
@@ -822,29 +866,14 @@
 						</ul>
 					</div>
 				</div>
-<!-- nelsi -->
+
+<!-- Catherine -->
 				<div class="fondo">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="../images/person2.jpg" alt="Image"></figure>
-						<h3>Nelsi Melgarejo Vergara</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Bachiller en Ingeniería de Sistemas por la Universidad Nacional del Callao. Con capacidad para la  investigación e iniciativa en desarrollo de proyectos tecnológicos relacionadas a las lenguas en riesgo de extinción.</p>
-						<ul class="social social-circle">
-							<li><a href="https://twitter.com/NelsiBMV" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
-						</ul>
-					</div>
-				</div>
-
-
-<!-- lorenzo -->
-				<div class="fondo">
-					<div class="fh5co-person text-center to-animate">
-						<figure><img src="../images/person4.jpg" alt="Image"></figure>
-						<h3>Lorenzo Ruiz De La Vega Tenorio</h3>
-						<span class="fh5co-position">Tesista</span>
-						<p>Líder indígena. Comunicador quechua, con inclinación a las relaciones públicas, investigación periodística y académica, redacción y manejo de redes sociales. Egresado de periodismo de la Universidad Antonio Ruiz de Montoya. Especialista en proyectos de desarrollo social. Apasionado radialista y documentalista, egresado de la Universidad Iberoamericana de México. Traductor y intérprete del quechua sureño (chanka y collao).</p>
+						<figure><img src="../images/Catherine.png" alt="Image"></figure>
+						<h3>Catherine García</h3>
+						<span class="fh5co-position">Investigadora Asociada</span>
+						<p>Abogada en Derecho y Ciencias Políticas. Ha realizado estudios sobre Privacidad, Seguridad de la información y Filosofía del Diseño de Tecnología. Trabaja en politicas publicas de las TICs orientadas a cerrar las brechas digitales y en la intersección de la tecnología, los derechos, la ética y la gobernanza del internet. Profesora de la Facultad de Administración Pública, Derecho y Seguridad de la Universidad de La Haya de Ciencias Aplicadas y Consultora independeinte en temas Tecnología Cívica e Innovacion Social  en Chakana Lab, consultora senior en el Programa de Diplomacia Multilateral del Instituto de las Naciones Unidas para la Formación e Investigación y experto en el Foro de Gobernanza de Internet de las Naciones Unidas.</p>
 						<ul class="social social-circle">
 							<li><a href="https://twitter.com/LRuizdelaVega" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://www.facebook.com/LorenzoRuizdelaVega" target="_blank"><i class="icon-facebook"></i></a></li>
@@ -961,15 +990,7 @@
 			</div>	
 </section>
 
-<!-- flexslider noticias-->
-<script>
-$(window).load(function() {
-  $('.flexslider1').flexslider({
-    animation: "slide"
-  });
-});
-</script>
-<!-- fin noticias-->
+
 
 <!-- contactano-->
 	<section id="fh5co-contact" data-section="contact">
@@ -1103,6 +1124,15 @@ $(window).load(function() {
 					} 
 			});
     </script>
+	<!-- flexslider noticias-->
+<script>
+$(window).load(function() {
+  $('.flexslider1').flexslider({
+    animation: "slide"
+  });
+});
+</script>
+<!-- fin noticias-->
 	<!--sweetalert-->
 	<script src="../js/sweetalert2.all.js"></script>
 	<!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support -->
