--- a/index.html
+++ b/index.html
@@ -672,10 +672,10 @@
 <!-- Catherine -->
 				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/person4.jpg" alt="Image"></figure>
+						<figure><img src="images/Catherine.png" alt="Image"></figure>
 						<h3>Catherine García</h3>
 						<span class="fh5co-position">Investigadora  Asociada</span>
-						<p>Abogada en Derecho y Ciencias Políticas. Ha realizado estudios sobre Privacidad, Seguridad de la información y Filosofía del Diseño de Tecnología. Trabaja en politicas publicas de las TICs orientadas a cerrar las brechas digitales y en la intersección de la tecnología, los derechos, la ética y la gobernanza del internet. Profesora de la Facultad de Administración Pública, Derecho y Seguridad de la Universidad de La Haya de Ciencias Aplicadas y Consultora independeinte en temas Tecnología Cívica e Innovacion Social  en Chakana Lab, consultora senior en el Programa de Diplomacia Multilateral del Instituto de las Naciones Unidas para la Formación e Investigación y experto en el Foro de Gobernanza de Internet de las Naciones Unidas. </p>
+						<p>Abogada en Derecho y Ciencias Políticas. Profesora de la Facultad de Administración Pública, Derecho y Seguridad de la Universidad de La Haya de Ciencias Aplicadas y Consultora independeinte en temas Tecnología Cívica e Innovacion Social  en Chakana Lab, consultora senior en el Programa de Diplomacia Multilateral del Instituto de las Naciones Unidas para la Formación e Investigación y experto en el Foro de Gobernanza de Internet de las Naciones Unidas. </p>
 						<ul class="social social-circle">
 							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
