--- a/ingles/index.html
+++ b/ingles/index.html
@@ -664,7 +664,7 @@
 						<figure><img src="../images/Catherine.png" alt="Image"></figure>
 						<h3>Catherine García</h3>
 						<span class="fh5co-position">Investigador Asociado</span>
-						<p>Juris Doctor in Law and Political Science. She has pursued studies on Privacy, Information Security and Philosophy of Technology Design. Bridging policy silos in the digital field, working at the intersection of technology, rights, ethics and governance.  Lecturer at the Faculty of Public Management, Law and Security at The Hague University of Applied Sciences and Civic Tech and Social Innovation Independent Consultant at Chakana Lab, senior consultant at the Multilateral Diplomacy Program of the United Nations Institute for Training and Research and accredited expert at the UN- Internet Governance Forum.</p>
+						<p>Juris Doctor in Law and Political Science. Lecturer at the Faculty of Public Management, Law and Security at The Hague University of Applied Sciences and Civic Tech and Social Innovation Independent Consultant at Chakana Lab, senior consultant at the Multilateral Diplomacy Program of the United Nations Institute for Training and Research and accredited expert at the UN- Internet Governance Forum.</p>
 						<ul class="social social-circle">
 							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
 							<li><a href="#" target="_blank"><i class="icon-facebook"></i></a></li>
