corrigiendo cierre de secciones

--- a/index.html
+++ b/index.html
@@ -477,7 +477,9 @@
 						</div>
 					</div>
 				</div>	
-
+			</div>
+		</div>
+	</section>
 
 <!-- fin que nos inspira -->
 
@@ -649,7 +651,10 @@
 						</ul>
 					</div>
 				</div>
-
+			</div>
+		</div>
+	</section>
+					
 
 <!-- estadistica -->
 	
